# cookiecutter-base

./: Dockerfile.tests  README.md  cookiecutter.json  pyproject.toml  requirements-tests.txt
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  README.md  pyproject.toml
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/: main.py
{{cookiecutter.project_name}}/tests/: test_main.py
