[tool.poetry]
name = "cookiecutter-base"
version = "0.1.0"
description = "Base cookiecutter template"
authors = ["Andrea Riciputi <andrea.riciputi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
cookiecutter = "^1.7.2"
black = "^19.10b0"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
